[gd_scene load_steps=9 format=3 uid="uid://bh6fggks3shfp"]

[ext_resource type="Script" uid="uid://dgmegvadncxwt" path="res://UI/MainMenu.gd" id="1_1a1a1"]
[ext_resource type="Texture2D" uid="uid://2ejioy4fw863" path="res://Assets/Art/ui/start-button-normal.png" id="2_normal"]
[ext_resource type="Texture2D" uid="uid://obshipkw2e4s" path="res://Assets/Art/ui/start-button-hover.png" id="3_hover"]
[ext_resource type="Texture2D" uid="uid://b0ukp3tvyow3j" path="res://Assets/Art/ui/start-button-pressed.png" id="4_pressed"]
[ext_resource type="Texture2D" uid="uid://200qousm40ib" path="res://Assets/Art/ui/title-background.png" id="5_background"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_normal"]
texture = ExtResource("2_normal")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_pressed"]
texture = ExtResource("4_pressed")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_hover"]
texture = ExtResource("3_hover")

[node name="MainMenu" type="CanvasLayer"]
layer = 100

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1a1a1")

[node name="Background" type="TextureRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_background")
expand_mode = 1

[node name="CenterContainer" type="CenterContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Spacer" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Spacer2" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Spacer3" type="Control" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="StartButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxTexture_normal")
theme_override_styles/pressed = SubResource("StyleBoxTexture_pressed")
theme_override_styles/hover = SubResource("StyleBoxTexture_hover")

[node name="SettingsButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="QuitButton" type="Button" parent="Control/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="SettingsPanel" type="Control" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="ColorRect" parent="Control/SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.15, 1)

[node name="CenterContainer" type="CenterContainer" parent="Control/SettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/SettingsPanel/CenterContainer"]
custom_minimum_size = Vector2(400, 350)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Control/SettingsPanel/CenterContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/SettingsPanel/CenterContainer/Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SettingsTitle" type="Label" parent="Control/SettingsPanel/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"
horizontal_alignment = 1

[node name="VolumeLabel" type="Label" parent="Control/SettingsPanel/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Volume"

[node name="VolumeSlider" type="HSlider" parent="Control/SettingsPanel/CenterContainer/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = -40.0
max_value = 0.0
value = -10.0

[node name="CloseButton" type="Button" parent="Control/SettingsPanel/CenterContainer/Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Close"

[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/StartButton" to="Control" method="_on_start_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/SettingsButton" to="Control" method="_on_settings_pressed"]
[connection signal="pressed" from="Control/CenterContainer/VBoxContainer/QuitButton" to="Control" method="_on_quit_pressed"]
[connection signal="value_changed" from="Control/SettingsPanel/CenterContainer/Panel/MarginContainer/VBoxContainer/VolumeSlider" to="Control" method="_on_volume_changed"]
[connection signal="pressed" from="Control/SettingsPanel/CenterContainer/Panel/MarginContainer/VBoxContainer/CloseButton" to="Control" method="_on_close_settings_pressed"]
